tests/test0147.ctr
'SINGLE_LANGUAGE'.
✎ write: 'aaa', brk.
{ ↲↲. } run.
✎ write: 'aaa', brk.
